--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +11,60 @@
     <!-- Custom Theme CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <!-- Starting of the Header -->
+
+    <header>
+        <!-- Nav Section Starts Here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 border-nav">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="img/logo-1.png" width="132" height="42" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
+                        <!-- Nav Links Start -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Team</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <!-- Nav Links End -->
+                    </ul>
+                    <form class="d-flex">
+                        <button class="btn btn-outline">Login</button>
+                        <button class="btn btn-fill" type="submit">Start Free Trial</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!-- Nav Section Ends Here -->
+    </header>
+
+    <!-- End of the Header -->
+
+
+
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- Custom Theme JS -->
     <script src="js/script.js"></script>
 </body>
+
 </html>
