--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Appolio</title>
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Fontawesome 6 CSS -->
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- Custom Theme CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 border-nav">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo-1.png" width="132" height="42" alt="">
+                    <img src="img/logo-1.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -48,13 +50,98 @@
                         <!-- Nav Links End -->
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline">Login</button>
+                        <button class="btn btn-outline me-2">Login</button>
                         <button class="btn btn-fill" type="submit">Start Free Trial</button>
                     </form>
                 </div>
             </div>
         </nav>
         <!-- Nav Section Ends Here -->
+
+        <!-- Hero Section Starts Here -->
+        <section class="hero p-section">
+            <div class="hero-icons">
+                <img class="icon1" src="img/decoration/f_01-1.png" alt="">
+                <img class="icon2" src="img/decoration/f_02-1.png" alt="">
+                <img class="icon3" src="img/decoration/h_08.png" alt="">
+                <img class="icon4" src="img/decoration/h_05.png" alt="">
+                <img class="icon5" src="img/decoration/h_09.png" alt="">
+                <img class="icon6" src="img/decoration/h_10.png" alt="">
+                <img class="icon7" src="img/decoration/h_11.png" alt="">
+                <img class="icon8" src="img/decoration/h_12.png" alt="">
+            </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-5">
+                        <div class="hero-content">
+                            <span class="hero-subtitle">
+                                <span># No1</span>
+                                Trending Apps On Play Store
+                            </span>
+                            <h3 class="hero-title">
+                                Get
+                                <span class="shape">Benefit</span>
+                                By Using Trending
+                                <span class="icon-text">
+                                    Apps
+                                    <img src="img/h_03.png" alt="Icon Text">
+                                </span>
+                            </h3>
+                            <p>
+                                Increase productivity with a simple to-do app. app for <br>
+                                managing your personal budgets
+                            </p>
+                            <div class="hero-button mt-5">
+                                <a class="btn btn-fill me-3" href="#">Start Free Trial</a>
+                                <a class="btn btn-outline" href="#">Watch Videos</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="hero-img">
+                            <div class="hero-main-img">
+                                <img src="img/img_01.png" alt="Hero Image" class="img-fluid">
+                            </div>
+                            <div class="hero-avatar">
+                                <img src="img/img_02-1.png" alt="Hero Avatar Image" class="img-fluid">
+                            </div>
+                            <div class="hero-icon">
+                                <img src="img/h_04.png" alt="Hero Icon Image" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="hero-right-wrap">
+                            <div class="hero-right">
+                                <div class="hero-avatar2">
+                                    <img src="img/img_03.png" alt="Hero Avatar2 Image" class="img-fluid">
+                                </div>
+                                <div class="hero-top-selling">
+                                    <h3>5.00</h3>
+                                    <span>Top selling Apps</span>
+                                </div>
+                                <div class="hero-line-shape">
+                                    <img src="img/h_06.png" class="line1">
+                                </div>
+                            </div>
+                            <ul class="hero-list list-unstyle">
+                                <li class="list-item">privacies & Terms Support</li>
+                                <li class="list-item">Strong Encryption System</li>
+                                <li class="list-item">First Youtube videos Uploaded</li>
+                            </ul>
+                            <div class="hero-count">
+                                <h3>35 K+</h3>
+                                <span>Active Install Apps</span>
+                            </div>
+                            <div class="hero-line-shape">
+                                <img src="img/h_07.png" class="line2">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Hero Section Ends Here -->
     </header>
 
     <!-- End of the Header -->
