--- a/index.html
+++ b/index.html
@@ -146,6 +146,54 @@
 
     <!-- End of the Header -->
 
+    <!-- Starting of the Stats Area -->
+    <div class="stats">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-4">
+                    <div class="d-flex justify-content-center mt-2">
+                        <div class="counter-item">
+                            <h2>50 K+</h2>
+                            <span>Free Download</span>
+                        </div>
+                        <div class="counter-item">
+                            <h2>20 milion</h2>
+                            <span>3,280 avg rating</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="brand-slide mt-2">
+                        <div class="owl-stage d-flex align-items-center">
+                            <div class="owl-item me-4">
+                                <img src="img/brand/b_01.png" alt="">
+                            </div>
+                            <div class="owl-item me-4">
+                                <img src="img/brand/b_03.png" alt="">
+                            </div>
+                            <div class="owl-item">
+                                <img src="img/brand/b_04.png" alt="">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="d-flex justify-content-center mt-2">
+                        <div class="counter-item">
+                            <h2>35 K+</h2>
+                            <span>Free Download</span>
+                        </div>
+                        <div class="counter-item">
+                            <h2>3,000 +</h2>
+                            <span>3,280 avg rating</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of the Stats Area -->
 
 
     <!-- Bootstrap JS -->
