--- a/index.html
+++ b/index.html
@@ -195,6 +195,95 @@
     </div>
     <!-- End of the Stats Area -->
 
+    <!-- Starting of the Feature Area -->
+    <section class="feature">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="title">
+                    <span class="feature-subtitle">
+                        <span># No 1</span>
+                        Trending Apps
+                    </span>
+                    <h2 class="feature-title">
+                        Why this App Installed
+                        <br>
+                        <span>4000K</span>
+                        Customer
+                    </h2>
+                </div>
+                <div class="feature-button">
+                    <a href="#" class="btn btn-rouded-outline">App Features</a>
+                </div>
+                <div class="feature-text">
+                    <p>Increase productivity with a simple to-do app.  managing your personal budgets Urna sit placerat tellus at est odio id. Pharetra</p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-lg-3">
+                    <div class="card-custom">
+                        <span class="icon">
+                            <img src="img/service/s_01.png" alt="">
+                        </span>
+                        <h3>Reguler Updates</h3>
+                        <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card-custom">
+                        <span class="icon">
+                            <img src="img/service/s_02.png" alt="">
+                        </span>
+                        <h3>Reguler Updates</h3>
+                        <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card-custom">
+                        <span class="icon">
+                            <img src="img/service/s_03.png" alt="">
+                        </span>
+                        <h3>Reguler Updates</h3>
+                        <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card-custom">
+                        <span class="icon">
+                            <img src="img/service/s_04.png" alt="">
+                        </span>
+                        <h3>Reguler Updates</h3>
+                        <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End of the Feature Area -->
+
+    <!-- Starting of the WCA Area -->
+    <section class="wca"></section>
+    <!-- End of the WCA Area -->
+
+    <!-- Starting of the ETM Area -->
+    <!-- End of the ETM Area -->
+
+    <!-- Starting of the YCM Area -->
+    <!-- End of the YCM Area -->
+
+    <!-- Starting of the AIA Area -->
+    <!-- End of the AIA Area -->
+
+    <!-- Starting of the PLAN Area -->
+    <!-- End of the PLAN Area -->
+
+    <!-- Starting of the BGI Area -->
+    <!-- End of the BGI Area -->
+
+    <!-- Starting of the Subcribe Area -->
+    <!-- End of the Subcribe Area -->
+
+    <!-- Starting of the Footer Area -->
+    <!-- End of the Footer Area -->
 
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
