--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                         </span>
                         <h3>Reguler Updates</h3>
                         <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                        <a class="service-link" href="#">Explore More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -235,6 +236,7 @@
                         </span>
                         <h3>Reguler Updates</h3>
                         <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                        <a class="service-link" href="#">Explore More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -244,6 +246,7 @@
                         </span>
                         <h3>Reguler Updates</h3>
                         <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                        <a class="service-link" href="#">Explore More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -253,6 +256,7 @@
                         </span>
                         <h3>Reguler Updates</h3>
                         <p>Bog cheeky bugger blow off only a quid grub he legged it porkies tosser young delinquent argy-bargy.</p>
+                        <a class="service-link" href="#">Explore More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
