--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="card-custom">
+                    <div class="card-custom active">
                         <span class="icon">
                             <img src="img/service/s_02.png" alt="">
                         </span>
