feat (update) : wca content

--- a/index.html
+++ b/index.html
@@ -265,7 +265,57 @@
     <!-- End of the Feature Area -->
 
     <!-- Starting of the WCA Area -->
-    <section class="wca"></section>
+    <section class="wca">
+        <div class="container">
+            <div class="row wca-content">
+                <div class="col-xl-5 col-lg-6">
+                    <div class="title">
+                        <span class="wca-subtitle">
+                            <span># Why</span>
+                            Choose Apps ?
+                        </span>
+                        <h2 class="wca-title">
+                            You Can Maintain Yourself
+                            <br>
+                            By Our
+                            <span>Application</span>
+                        </h2>
+                        <p>
+                            Sed pellentesque lectus phasellus vivamus tempus lectus aliquam ut convallis. Urna at amet et risus dignissim arcu. Rhoncus bibendum habitant 
+                        </p>
+                    </div>
+                    <div class="wca-wrap">
+                        <ul class="wca-tab">
+                            <li class="wca-nav-item">
+                                <a href="#" class="wca-nav-link active">Earn Money</a>
+                            </li>
+                            <li class="wca-nav-item">
+                                <a href="#" class="wca-nav-link">Get Fintess Tips</a>
+                            </li>
+                            <li class="wca-nav-item">
+                                <a href="#" class="wca-nav-link">Hire Couch</a>
+                            </li>
+                        </ul>
+                        <div class="wca-wrap-content">
+                            <div class="wca-tab-pane">
+                                <ul class="wca-list">
+                                    <li>Refresing to get such a personal touch.</li>
+                                    <li>If you are going to use a passage.</li>
+                                    <li>Lorem Ipsum generators on the tend to repeat.</li>
+                                    <li>Lorem Ipsum generators on the tend to repeat.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-7 col-lg-6">
+                    <div class="wca_img">
+                        <img src="img/img_01-1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End of the WCA Area -->
 
     <!-- Starting of the ETM Area -->
