feat (etm) : update

--- a/index.html
+++ b/index.html
@@ -267,6 +267,10 @@
     <!-- Starting of the WCA Area -->
     <section class="wca">
         <div class="container">
+            <div class="circle_shape">
+                <span class="shape shape1"></span>
+                <span class="shape shape2"></span>
+            </div>
             <div class="row wca-content">
                 <div class="col-xl-5 col-lg-6">
                     <div class="title">
@@ -319,6 +323,75 @@
     <!-- End of the WCA Area -->
 
     <!-- Starting of the ETM Area -->
+    <section class="etm">
+        <div class="container gray-bg-2 padding-etm">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="tx-sec-title text-center mb-70">
+                        <h2 class="etm-title">
+                            Easy To Manage your All Data
+                            By this <span>Applicaiton</span>
+                        </h2>
+                        <p class="color-black">
+                            Fitness create ready Application for your business and Fitness powered website
+                        </p>
+                    </div>
+                    <div class="tx-nesalater-form">
+                        <p>
+                            <input type="text" placeholder="Enter Your Mail...">
+                            <button class="thm-btn" type="submit"> <span class="btn-wrap"><span>GET STARTED</span> </span> </button>
+                        </p>
+                    </div>
+                    <div class="app-img mt-115 text-center">
+                        <img decoding="async" src="img/img_03-1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="review_wrap">
+            <div class="review_item position-1 active">
+                <div class="review_content">
+                    <h3>Responsive Friendly Design</h3>
+                    <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit, sed</p>
+                </div>
+                <div class="review_img">
+                    <img decoding="async" src="img/img_01-1-1.png" alt="" width="123" height="119">
+                </div>
+            </div>
+            <div class="review_item position-2" >
+                <div class="review_content">
+                    <h3>Responsive Friendly Design</h3>
+                    <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit, sed</p>
+                </div>
+                <div class="review_img">
+                    <img decoding="async" src="img/img_02.png" alt="" width="120" height="117">
+                </div>
+            </div>
+            <div class="review_item position-3" >
+                <div class="review_content">
+                    <h3>Responsive Friendly Design</h3>
+                    <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit, sed</p>
+                </div>
+                <div class="review_img">
+                    <img decoding="async" src="img/img_04.png" alt="" width="120" height="117">
+                </div>
+            </div>
+            <div class="review_item position-4" >
+                <div class="review_content">
+                    <h3>Responsive Friendly Design</h3>
+                    <p>Lorem ipsum dolor sit amet, cons ectetur adipisicing elit, sed</p>
+                </div>
+                <div class="review_img">
+                    <img decoding="async" src="img/img_03-2.png" alt="" width="120" height="117">
+                </div>
+            </div>
+        </div>
+        <div class="feature_ss">
+            <img decoding="async" class="shape" src="img/f_line.png" alt="" width="272" height="93">
+            <img decoding="async" class="ss_01" src="img/img_04-1.png" alt="" width="291" height="249">
+            <img decoding="async" class="ss_02" src="img/img_05-1.png" alt="" width="272" height="336">
+        </div>
+    </section>
     <!-- End of the ETM Area -->
 
     <!-- Starting of the YCM Area -->
